[package]
name = "naswiz"
version = "0.1.2"
edition = "2021"
authors = ["Othi <mnpq.raven@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.16"
dns-lookup = "1.0.8"
regex = "1.6.0"
rpassword = "7.0.0"
tokio = "1.20.1"
