[package]
name = "naswiz"
version = "0.1.3"
edition = "2021"
description = "Synology NAS mountpoint update wizard\nThis program updates the mountpoint address in systemd"
authors = ["Othi <mnpq.raven@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
dns-lookup = "1.0.8"
regex = "1.6.0"
rpassword = "7.0.0"
tokio = "1.20.1"
